# laptop-chemistry

./: .gitignore  README.md  pyproject.toml  qry_sqldb.py
data/: chembl_approved_small_molecule_drugs.csv  ci1c00761_si_001.txt  full-clinical-ring-download-2020-rich-taylor.txt  full-drug-ring-download-2020-rich-taylor.txt
notebooks/: chembl_small_molecule_drugs.ipynb  chembl_small_molecule_published_compounds.ipynb  notebook_utils.py  openmm_proteinprep.ipynb  pyplot_template.ipynb  qry_chembl_approved_small_molecule_drugs.ipynb  qry_chembl_small_molecule_qry_published_small_molecules.ipynb  rdkit_hba-hbd_definitions.ipynb  rdkit_molecule_2d_profile.ipynb  rdkit_property_visual.ipynb  rdkit_structure_profile.ipynb
queries/: chembl_approved_small_molecule_drugs.sql
scripts/: qry_sqldb.py  rdkit_2d_profile.py  rdkit_smiles_profile.py
sql/: chembl_approved_small_molecule_drugs.sql  chembl_published_small_molecules.sql
src/cheminformatics/: __init__.py  visualization.py
tutorials/openmm_basic_md/: openmm-basic-md.ipynb  openmm-basic-md.py  villin-n68h_solv_state.csv  villin-n68h_solv_trj.dcd
tutorials/openmm_basic_model/: openmm-basic-model.ipynb
tutorials/openmm_lysozyme_in_water/: openmm_nvt.ipynb  run_openmm_simulation.py
tutorials/openmm_lysozyme_in_water/1aki-openmm/: 1aki-openmm_checkpoint  1aki-openmm_integrator.xml  1aki-openmm_trj.xtc  run_openmm_simulation.py
